--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ main {
 
 .container {
   width: 1000px;
+
   margin: 0 auto;
   background-color: #e6e6e6;
 }
@@ -107,3 +108,13 @@ main {
     align-items: initial;
   }
  }
+
+.player {
+  width: 100%;
+  height: 0;
+  padding-top:56.2%;
+  margin-top: 20px;
+  background-size: contain;
+  background-image: url(/img/player-bg1.jpg);
+  background-repeat: no-repeat;
+}
