--- a/style.css
+++ b/style.css
@@ -14,13 +14,11 @@ main {
   padding: 50px 30px 0;
 }
 
-
-
 .container {
   width: 1000px;
 
   margin: 0 auto;
-  background-color: #e6e6e6;
+  background-color: #b3b3b3;
 }
 
 .header {
