--- a/style.css
+++ b/style.css
@@ -55,9 +55,7 @@ main {
 }
 
 .navbar-link {
-  width: 100%;
-  height: 100%;
-
+  margin:0 auto;
   text-decoration: none;
   color: #000;
   font-size: larger;
@@ -83,6 +81,10 @@ main {
   padding-right: 30px;
   font-size: larger;
   font-weight: 700;
+}
+
+.logo {
+  transition: 0.3s;
 }
 
 .logo:hover {
@@ -143,4 +145,8 @@ main {
 
 .active a {
   color: #bdae82;
+}
+
+.audio {
+
 }
